// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceDetailsFooter renders per snapshot when all card interactions are supported (ie, web) 1`] = `
<div
  className="foot"
>
  <div
    className="highlightStatus"
  >
    <StyledIconBase
      ariaHidden="true"
      iconName="hide"
    />
    <StyledLabelBase>
      Highlight hidden
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
        "unifiedResultToIssueFilingDataConverter": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        },
      }
    }
    issueDetailsData={Object {}}
    userConfigurationStoreData={Object {}}
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot when only UserConfig-agnostic card interactions are supported (ie, electron) 1`] = `
<div
  className="foot"
>
  <div
    className="highlightStatus"
  >
    <StyledIconBase
      ariaHidden="true"
      iconName="hide"
    />
    <StyledLabelBase>
      Highlight hidden
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": false,
        },
        "unifiedResultToIssueFilingDataConverter": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        },
      }
    }
    issueDetailsData={Object {}}
    userConfigurationStoreData={Object {}}
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="hidden" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightStatus"
  >
    <StyledIconBase
      ariaHidden="true"
      iconName="hide"
    />
    <StyledLabelBase>
      Highlight hidden
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
        "unifiedResultToIssueFilingDataConverter": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        },
      }
    }
    issueDetailsData={Object {}}
    userConfigurationStoreData={Object {}}
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="unavailable" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightStatus"
  >
    <StyledIconBase
      ariaHidden="true"
      iconName="hide"
    />
    <StyledLabelBase>
      Highlight unavailable
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
        "unifiedResultToIssueFilingDataConverter": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        },
      }
    }
    issueDetailsData={Object {}}
    userConfigurationStoreData={Object {}}
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="visible" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightStatus"
  >
    <StyledIconBase
      ariaHidden="true"
      iconName="redEye"
    />
    <StyledLabelBase>
      Highlight visible
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
        "unifiedResultToIssueFilingDataConverter": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        },
      }
    }
    issueDetailsData={Object {}}
    userConfigurationStoreData={Object {}}
  />
</div>
`;
